--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@actions/core": "^1.2.4",
     "@actions/github": "^4.0.0",
     "@octokit/rest": "^18.0.0",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "@octokit/plugin-throttling"
   }
 }
