Add .npmrc & update package.json & action.yml

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'LeetCode Sync'
+name: 'CherryKatatonic LeetCode Sync'
 description: 'Sync LeetCode submissions to GitHub'
 branding: 
   icon: git-commit
