--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leetcode-sync",
   "version": "1.4.0",
-  "description": "Forked GitHub Action for syncing LeetCode submissions to a git repository",
+  "description": "GitHub Action for syncing LeetCode submissions to a git repository",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
